Creating export dir when building container

--- a/Dockerfiles/hugo/Makefile
+++ b/Dockerfiles/hugo/Makefile
@@ -3,6 +3,7 @@ HUGO_EXPORT_PATH := $$(pwd)/../../../hugo
 
 build:
 	docker build --rm -t $(IMAGE_NAME) .
+	mkdir -p $(HUGO_EXPORT_PATH)
 	
 run:
 	@echo docker run --rm -it -v $(HUGO_EXPORT_PATH):/srv $(IMAGE_NAME) 
