Fix detecting actual directory

--- a/Dockerfiles/icinga2-classicui/Makefile
+++ b/Dockerfiles/icinga2-classicui/Makefile
@@ -1,5 +1,5 @@
 IMAGE_NAME := waja/icinga2-classicui
-ICINGA_CONF_EXPORT_PATH := $(pwd)/conf.d
+ICINGA_CONF_EXPORT_PATH := $(shell pwd)/conf.d
 
 build:
 	docker build --rm -t $(IMAGE_NAME) .
